# ToyTwoProngDecay

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: index.md
docs/notebooks/: example_simulate_factory.ipynb  example_simulate_factory_configurable.ipynb  mnpe-demo.ipynb
scripts/: build_docs.py
src/notebooks/: example_simulate_factory.ipynb  example_simulate_factory.py  example_simulate_factory_configurable.py  mnpe-demo.ipynb  mnpe-demo.py  toy2decay-simulator.py
src/toymc_for_mnpe/: __init__.py  generator.py
src/ttpd/: __init__.py  __main__.py  generator.py  kinematics.py
tests/: test_generator.py
