[project]
name = "ToyTwoProngDecay"
version = "0.1.0"
description = "Fast approximate two-particle decay simulation with a configurable factory interface"
readme = "README.md"
authors = [
    { name = "Peter Steinbach", email = "p.steinbach@hzdr.de" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["particle-physics", "simulation", "toy-monte-carlo", "unfolding"]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "sbi==0.25.0",
    "torch<2.6",
]

[project.scripts]
ttpd = "ttpd:main"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ttpd*"]
namespaces = false
